--- a/views/dives/new.ejs
+++ b/views/dives/new.ejs
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Add dive</title>
+  <title>Add a new dive</title>
 </head>
 <body>
   <%- include('../partials/_navbar.ejs') %>
   <h1>Add dive </h1>
 
-  <form action="/users/<%= user._id %>/dives" method="POST">
+  <form action="/dives" method="POST">
     <label for="location">site of diving:</label>
     <input type="text" name="location" id="location" required />
 
@@ -25,7 +25,7 @@
     <input type="text" name="bottomTime" id="bottomTime" required />
 
     <label for="notes">notes:</label>
-    <input type="text" name="note" id="notes" />
+    <input type="text" name="noteس" id="notes" />
 
     <label for="rating">rating:</label>
     <input type="text" name="rating" id="rating" />
@@ -33,6 +33,6 @@
     <button type="submit">Add</button>
   </form>
 
-  <a href="/users/<%= user._id %>">Back to Pantry</a>
+  <a href="/users/<%= user._id %>">Back to my dives</a>
 </body>
 </html>
