--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,19 +6,17 @@
   <title>Home Page</title>
 </head>
 <body>
-<%- include('./partials/_navbar.ejs') %>
 <% if (user) { %>
-<h1>Welcome Diver, <%= user.username %>!</h1>
-<p>
-  <a href="/auth/sign-out">Sign out</a>
-</p>
+  <%- include('./partials/_navbar.ejs') %>
+<h1>Welcome, <%= user.username %>!</h1>
+
 <% } else { %>
-<h1>Welcome to the app, guest.</h1>
+<h1>Diving Record Tracker.</h1>
 <p>
   <a href="/auth/sign-up">Sign up</a> or <a href="/auth/sign-in">Sign in</a>.
 </p>
 <% } %>
-<p><a href="/vip-lounge">Get into the VIP Users Only lounge!</a></p>
+
 
 </body>
 </html>
