adding edit page

--- a/views/dives/new.ejs
+++ b/views/dives/new.ejs
@@ -25,7 +25,7 @@
     <input type="text" name="bottomTime" id="bottomTime" required />
 
     <label for="notes">notes:</label>
-    <input type="text" name="noteس" id="notes" />
+    <input type="text" name="note" id="notes" />
 
     <label for="rating">rating:</label>
     <input type="text" name="rating" id="rating" />
