--- a/views/dives/index.ejs
+++ b/views/dives/index.ejs
@@ -2,6 +2,7 @@
 <html>
 <head><meta charset="UTF-8"><title>My Dives</title></head>
 <body>
+  <%- include('../partials/_navbar.ejs') %>
   <h1>My Dive Logs</h1>
   <p><a href="/dives/new">+ Add new dive</a></p>
 
