--- a/views/dives/new.ejs
+++ b/views/dives/new.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="/styles.css">
   <title>Add a new dive</title>
 </head>
 <body>
@@ -44,6 +45,6 @@
     <button type="submit">Add</button>
   </form>
 
-  <a href="/users/<%= user._id %>">Back to my dives</a>
+  <a href="/dives">Back to my dives</a>
 </body>
 </html>
